<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="message">login</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="login_name">login name</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="Switch"> What does this do? </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title">Exit</string>
    <string name="dialog_message">Do you want to leave the page?</string>
    <string name="start_chat">Start Chat</string>
    <string name="send">send</string>
    <string name="switch1">Switch is On</string>
    <string name="switch2">Switch is Off</string>
    <string name="infopass">ListItemsActivity passed: My information to share</string>
    <string name="id_equal">\      ID=</string>
    <string name="message_here">\      MessageHere</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="title_activity_main">TestToolbar</string>
    <string name="forecast">weather forecast</string>
    <string name="test_toolbar">Test Toolbar</string>
    <string name="title_activity_test_an">TestAnActivity</string>
    <string name="title_activity_test_eric">testEric</string>

    <string name="OK">OK</string>
    <string name="CANCEL">Cancel</string>
    <string name="title">Do you want to go back?</string>

</resources>
