<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chen.androidlabs.StartActivity">

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/hello_message"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonText"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/start_chat"
        android:layout_below="@+id/hello"
        android:layout_marginTop="52dp"
        android:text="@string/ButtonText"
        android:visibility="visible"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="199dp" />

    <Button
        android:id="@+id/start_chat"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ButtonText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/start_chat" />

    <Button
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/start_chat"
        android:layout_below="@+id/start_chat"
        android:layout_marginTop="20dp"
        android:text="@string/forecast" />

    <Button
        android:id="@+id/toolbar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/weather"
        android:layout_alignStart="@+id/weather"
        android:layout_below="@+id/weather"
        android:layout_marginTop="19dp"
        android:text="@string/test_toolbar" />

</RelativeLayout>
